Refactor apis, add supports for multiple rsvp
