# src/libs/data/schema/invitee.ts
@@ -4,9 +4,12 @@
  * Next Swagger API Example
  * OpenAPI spec version: 1.0
  */
+import type { Rsvp } from "./rsvp";
 
-export type GroupEventOwner = {
+export interface Invitee {
+  /** Identifier of the invitee */
   id: string;
-  /** Name of the owner */
+  /** Name of the invitee */
   name: string;
-};
+  rsvps: Rsvp[];
+}
